# modern-rzip

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  BUGS  Makefile  Makefile.in  README.md  TODO  aclocal.m4  common.mk.in  configure  configure.ac
.github/workflows/: build.yml  release.yml
ar-mrzip/: Makefile  ar-mrzip.cpp  blake2b.h  main.cpp
build-aux/: ac_prog_strip.m4  ax_check_compile_flag.m4
common/: Makefile  blake2b.h
include/: config.h  lrzip_core.h  lrzip_private.h  mrzip_core.h  mrzip_private.h  runzip.h  rzip.h  stream.h  util.h
rs-mrzip/: Makefile  README.md  blake2b.c  blake2b.h  main.c  reed-solomon.c  reed-solomon.h  rs-mrzip.c
src/: lrzip.c  main.c  mrzip.c  runzip.c  rzip.c  stream.c  util.c
